--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-use": "17.6.0",
     "recharts": "2.15.0",
     "server-only": "0.0.1",
+    "swiper": "^11.2.1",
     "valibot": "0.42.1"
   },
   "devDependencies": {
