--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "emoji-mart": "5.6.0",
+    "flowise-embed-react": "^1.0.7",
     "fs-extra": "11.2.0",
     "input-otp": "1.4.1",
     "keen-slider": "6.8.6",
