--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,20 @@
 # App
 # -----------------------------------------------------------------------------
 BASEPATH=
-NEXT_PUBLIC_APP_URL=http://localhost:3000${BASEPATH}
+NEXT_PUBLIC_CMS_URL=https://cms.app.khi.local
+NEXT_PUBLIC_CMS_URL_ASSETS=https://cms.app.khi.local/assets
+NEXT_PUBLIC_CMS_PORT=
+NEXT_PUBLIC_CMS_PROTOCOL=https
+NEXT_PUBLIC_APP_URL=http://192.168.102.70:3009${BASEPATH}
 NEXT_PUBLIC_DOCS_URL=https://demos.pixinvent.com/vuexy-nextjs-admin-template/documentation
+NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # -----------------------------------------------------------------------------
 # Authentication (NextAuth.js)
 # -----------------------------------------------------------------------------
 NEXTAUTH_BASEPATH=${BASEPATH}/api/auth
-NEXTAUTH_URL=http://localhost:3000${BASEPATH}/api/auth
-NEXTAUTH_SECRET=
+NEXTAUTH_URL=http://192.168.102.70:3009${BASEPATH}/api/auth
+NEXTAUTH_SECRET=0af6295afac4f7fa66ba3b79ef6d08ba
 
 # Google OAuth 2.0 (https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID=
@@ -24,7 +29,7 @@ DATABASE_URL=
 # -----------------------------------------------------------------------------
 # API
 # -----------------------------------------------------------------------------
-API_URL=http://localhost:3000${BASEPATH}/api
+API_URL=http://192.168.102.70:3009${BASEPATH}/api
 NEXT_PUBLIC_API_URL=${API_URL}
 
 # -----------------------------------------------------------------------------
