--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-dropzone": "14.3.5",
     "react-hook-form": "7.54.1",
     "react-map-gl": "7.1.8",
+    "react-markdown": "^9.0.3",
     "react-perfect-scrollbar": "1.5.8",
     "react-player": "2.16.0",
     "react-redux": "9.2.0",
