--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "build:icons": "tsx src/assets/iconify-icons/bundle-icons-css.ts",
-    "migrate": "dotenv -e .env -- npx prisma migrate dev",
-    "postinstall": "prisma generate && npm run build:icons",
+    "postinstall": "npm run build:icons",
     "removeI18n": "tsx src/remove-translation-scripts/index.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "2.7.4",
     "@emoji-mart/data": "1.2.1",
     "@emoji-mart/react": "1.1.1",
     "@emotion/cache": "11.14.0",
@@ -36,7 +34,6 @@
     "@mui/lab": "6.0.0-beta.19",
     "@mui/material": "6.2.1",
     "@mui/material-nextjs": "6.2.1",
-    "@prisma/client": "5.22.0",
     "@reduxjs/toolkit": "2.5.0",
     "@tanstack/match-sorter-utils": "8.19.4",
     "@tanstack/react-table": "8.20.6",
@@ -64,7 +61,6 @@
     "mapbox-gl": "3.9.0",
     "negotiator": "1.0.0",
     "next": "15.1.2",
-    "next-auth": "4.24.11",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
     "react-colorful": "5.6.1",
@@ -100,7 +96,6 @@
     "@typescript-eslint/parser": "7.18.0",
     "autoprefixer": "10.4.20",
     "consola": "3.3.0",
-    "dotenv-cli": "7.4.4",
     "eslint": "8.57.1",
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "9.1.0",
@@ -110,7 +105,6 @@
     "postcss": "8.4.49",
     "postcss-styled-syntax": "0.7.0",
     "prettier": "3.4.2",
-    "prisma": "5.22.0",
     "stylelint": "16.12.0",
     "stylelint-use-logical-spec": "5.0.1",
     "stylis": "4.3.4",
@@ -126,8 +120,5 @@
   },
   "overrides": {
     "rimraf": "^5.0.7"
-  },
-  "prisma": {
-    "schema": "./src/prisma/schema.prisma"
   }
 }
